# relic

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml  relic.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
.knowledge/: _index.md
docs/: MCP.md
relic/: __init__.py  agent_config.py  audit.py  benchmark.py  centrality.py  cli.py  coverage.py  cycles.py  diff.py  discovery.py  freshness.py  generator.py  impact.py  indexer.py  loader.py  mcp_server.py  search.py  staleness.py  style.py  toon.py  viz.py  watcher.py
relic/parsers/: __init__.py  base.py  docs.py  treesitter.py
relic/templates/: graph.md.j2
tests/: conftest.py  test_agent_config.py  test_audit.py  test_coverage.py  test_diff.py  test_freshness.py  test_incremental.py  test_mcp_handlers.py  test_phase6_pr1.py  test_phase8.py  test_search.py  test_stats.py  test_style.py  test_token_budget.py  test_toon.py  test_v030.py  test_watcher.py
