[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relic"
version = "0.1.0"
description = "Codebase knowledge management CLI for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.3",
    "PyYAML>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "watchdog>=4.0.0",
]

[project.scripts]
relic = "relic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["relic"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# RELIC_INSTRUCTIONS bullets are single-line imperatives shipped verbatim to
# the LLM. Splitting them with implicit-concat hurts readability without
# changing the output. Keep them long.
"relic/agent_config.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
